--- a/notestyle.css
+++ b/notestyle.css
@@ -34,6 +34,18 @@ body {
     transition: transform 0.2s;
 }
 
+.book {
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 200px;
+    background-color: #FFFBF5;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    transition: transform 0.2s;
+}
+
 .note:hover {
     transform: scale(1.05);
 }
